Revert masthead overflow changes (now fixed for homepage specifically in homepage.scss)

--- a/_src/sass/components/_masthead.scss
+++ b/_src/sass/components/_masthead.scss
@@ -9,8 +9,6 @@
     /* For date positioning. */
     position: relative;
     background: $background-color-masthead;
-    overflow-x: hidden;
-    overflow-y: visible;
 
     .title {
     /*** The title-and-teaser wrapper.
